--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 {{$NEXT}}
   - Add Time::D for dealing with differences between two epochs.
   - Add bool overload to Time::C as suggested by Perl::Critic::Freenode.
+  - Fix ->new() constructor when given a timezone outside of UTC/GMT.
+  - Add tests for timezones.
   - Minor internal improvements.
 
 0.006     2016-09-27 13:24:15+02:00 Europe/Stockholm
