--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 {{$NEXT}}
+  - Add Time::Ago to See Also section of Time::D.
+  - Change how Time::D->sign works.
+  - Fix bugs in Time::D->to_array().
 
 0.009     2016-10-01 00:46:04+02:00 Europe/Stockholm
   - Forgot to add the changes when I released 0.008, so they're now added.
