--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Update Changes for 0.016.
+  - Add release check that Changes file has actually been updated.
 
 0.016     2016-10-31 15:48:18+01:00 Europe/Stockholm
   - Add Time::F for getting formatted strings from times.
