--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Fix week-bugs in Time::P and Time::F.
+  - Fix AM/PM-bugs in Time::P and Time::F.
 
 0.017     2016-10-31 16:09:24+01:00 Europe/Stockholm
   - Update Changes for 0.016.
