--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Fix bug in Time::D when manipulating values in negative diffs.
+  - Fix synopses with small errors.
 
 0.019     2016-11-01 17:02:09+01:00 Europe/Stockholm
   - Change ->string and ->strftime in Time::C to use Time::F instead of
