--- a/Changes
+++ b/Changes
@@ -1,4 +1,9 @@
 {{$NEXT}}
+  - Change how strptime in Time::P works; it now returns a list of key-value
+    pairs of the data it was able to parse, suitable for passing to
+    Time::C->mktime.
+    Note: this is a ** BREAKING CHANGE ** ... but that's alright, because we're
+    only at version 0.021.
 
 0.020     2016-11-01 21:53:57+01:00 Europe/Stockholm
   - Fix bug in Time::D when manipulating values in negative diffs.
