--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 {{$NEXT}}
   - Fix bug in Time::C->mktime where it would think things that weren't defined
     yet were if no date part was given.
+  - Fix bug in Time::C->strptime where it wouldn't do anything if the epoch was
+    already defined and the epoch wasn't parsed from the string.
 
 0.021     2016-11-02 11:54:43+01:00 Europe/Stockholm
   - Change how strptime in Time::P works; it now returns a list of key-value
