--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix support for Function::Parameters 2, thanks mauke!
 
 0.023     2016-11-04 09:27:14+01:00 Europe/Stockholm
   - Add support for %E* and %O* format specifiers to Time::F and Time::P.
